# pro-memoria

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  PLANS.md  README.md  SPECIFICATION-LICENSE  core.py  dsp.py  handshake.py  hybrid.py  lexicon.py  protocol.py  pyproject.toml  test_handshake.py  test_hybrid.py
.githooks/: pre-commit.bat
.github/workflows/: validate-tools.yml
bench/: pre_vs_post_comparison.py  real_traces.py  test_dsp.py  token_efficiency.py  track_efficiency.py
demo/: react_integration.py
opencode_plugin/: adapter.py  cli.py  dashboard.py  failsafe.py  verify_integration.py  verify_results.json
paper/: generate_figures.py  generate_pdf.py  pro-memoria.md
pro_memoria/: __init__.py  __main__.py  cli.py
pro_memoria/bench/: __init__.py
pro_memoria/demo/: __init__.py
pro_memoria/opencode_plugin/: __init__.py
pro_memoria/paper/: __init__.py
redteam/: pro-memoria.md  reddit-draft.md
